--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,12 @@
     "server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.11",
+    "@heroicons/react": "^2.0.16",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.9",
     "axios": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
