--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "react-use": "^17.4.0"
   },
   "devDependencies": {
+    "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-helmet": "^6.1.6",
