--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.1",
     "react-use": "^17.4.0"
   },
   "devDependencies": {
