--- a/.github/workflows/local-build.yml
+++ b/.github/workflows/local-build.yml
@@ -29,8 +29,8 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        go: ["1.19", "1.20"]
-        node: ["18", "19"]
+        go: ["1.19"]
+        node: ["18"]
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
