--- a/.github/workflows/local-build.yml
+++ b/.github/workflows/local-build.yml
@@ -53,4 +53,4 @@ jobs:
           yarn install --frozen-lockfile
           yarn build
           cd ..
-          make build
+          make build-release
