--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.16",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -17,9 +18,12 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
     "axios": "^1.3.3",
+    "chart.js": "^4.2.1",
+    "dayjs": "^1.11.7",
+    "faker": "^6.6.6",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
@@ -29,12 +33,12 @@
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/react-helmet": "^6.1.6",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
     "json-server": "^0.17.1",
     "postcss": "^8.4.21",
+    "react-helmet-async": "^1.3.0",
     "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
