--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,31 @@ services:
       interval: 10s
       timeout: 5s
       retries: 10
+  minio:
+    image: minio/minio:RELEASE.2021-07-05T00-50-56Z
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    entrypoint: sh
+    environment:
+      MINIO_ACCESS_KEY: ximager
+      MINIO_SECRET_KEY: ximager-ximager
+    command: mkdir -p /data/ximager && minio server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+  postgres:
+    image: postgres:15-alpine
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_PASSWORD: ximager
+      POSTGRES_USER: ximager
+      POSTGRES_DB: ximager
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "ximager"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
