--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Server Build CI
+name: Test CI
 
 on:
   push:
@@ -10,23 +10,8 @@ on:
       - main
 
 jobs:
-  # leetcode-server-lint:
-  #   name: leetcode-server-lint
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #     - name: Checkout branch
-  #       uses: actions/checkout@v2
-  #       with:
-  #         fetch-depth: 0
-  #         lfs: true
-  #     - name: Lint code
-  #       uses: golangci/golangci-lint-action@v3
-  #       with:
-  #         version: latest
-  #         working-directory: apps/cli
-  #         args: -v --timeout=5m
-  local-build:
-    name: local-build
+  lint:
+    name: lint
     runs-on: ubuntu-22.04
     strategy:
       matrix:
@@ -48,10 +33,12 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: "yarn"
           cache-dependency-path: "web/yarn.lock"
-      - name: Build server
+      - name: Build web
         run: |
           cd web
           yarn install --frozen-lockfile
           yarn build
-          cd ..
-          make build-release
+      - name: Setup golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          args: --deadline=10m
