--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,16 @@ services:
   ximager:
     image: ximager:latest
     ports:
-      - "5001:5000"
-      - "3001:3000"
-    volumes:
-      - ./images:/images
-    environment:
-      XIMAGER_IMAGE_DIR: /images
+      - "3000:3000"
+    command: server
     depends_on:
       mysql:
         condition: service_healthy
       redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      minio:
         condition: service_healthy
   mysql:
     image: mysql:8.0
@@ -39,22 +39,23 @@ services:
       timeout: 5s
       retries: 10
   minio:
-    image: minio/minio:RELEASE.2021-07-05T00-50-56Z
+    image: quay.io/minio/minio:RELEASE.2023-03-09T23-16-13Z
     ports:
       - "9000:9000"
       - "9001:9001"
-    entrypoint: sh
     environment:
-      MINIO_ACCESS_KEY: ximager
-      MINIO_SECRET_KEY: ximager-ximager
-    command: mkdir -p /data/ximager && minio server /data --console-address ":9001"
+      MINIO_ROOT_USER: ximager
+      MINIO_ROOT_PASSWORD: ximager-ximager
+      MINIO_REGION_NAME: cn-north-1
+    entrypoint: ''
+    command: /bin/sh -c 'mkdir -p /data/ximager && minio server /data --console-address ":9001"'
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 10s
       timeout: 5s
       retries: 10
   postgres:
-    image: postgres:15-alpine
+    image: postgres:14-alpine
     ports:
       - "5432:5432"
     environment:
@@ -63,6 +64,36 @@ services:
       POSTGRES_DB: ximager
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "ximager"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+  pma:
+    image: phpmyadmin/phpmyadmin:5.2.1
+    ports:
+      - "8080:80"
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: 3306
+      PMA_USER: ximager
+      PMA_PASSWORD: ximager
+    depends_on:
+      - mysql
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+  pgadmin:
+    image: dpage/pgadmin4:6.21
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ximager@tosone.cn
+      PGADMIN_DEFAULT_PASSWORD: ximager
+    depends_on:
+      - postgres
+    healthcheck:
+      test: ["CMD", "nc", "-vz", "localhost", "80"]
       interval: 10s
       timeout: 5s
       retries: 10
