--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,7 +70,7 @@ jobs:
           sleep 5
       - name: Run tests
         run: |
-          CI_DATABASE_TYPE=sqlite3 go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+          CI_DATABASE_TYPE=sqlite3 go test -v -coverprofile=coverage.txt -covermode=atomic `go list ./... | grep -v "pkg/tests"`
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
@@ -137,7 +137,7 @@ jobs:
           sleep 5
       - name: Run tests
         run: |
-          CI_DATABASE_TYPE=postgresql go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+          CI_DATABASE_TYPE=postgresql go test -v -coverprofile=coverage.txt -covermode=atomic `go list ./... | grep -v "pkg/tests"`
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
@@ -204,7 +204,7 @@ jobs:
           sleep 5
       - name: Run tests
         run: |
-          CI_DATABASE_TYPE=mysql go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+          CI_DATABASE_TYPE=mysql go test -v -coverprofile=coverage.txt -covermode=atomic `go list ./... | grep -v "pkg/tests"`
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
