:sparkles: Complete sbom and scan worker

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -46,9 +46,9 @@ jobs:
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: ./build/Dockerfile
-          ignore: DL3018
+          ignore: DL3018,DL3003
       - name: Lint Dockerfile
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: ./build/local.Dockerfile
-          ignore: DL3018
+          ignore: DL3018,DL3003
