--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -19,6 +19,21 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
-      - name: Build image
-        run: |
-          make docker-build
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: tosone
+          password: ${{ secrets.GHCR_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: build/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ghcr.io/ximager/ximager:latest
