--- a/conf/ximager.yaml
+++ b/conf/ximager.yaml
@@ -35,6 +35,13 @@ storage:
     region: cn-north-1
     bucket: ximager
     forcePathStyle: true
+# Notice: the tag never update after the first pulled from remote registry, unless you delete the image and pull again.
+proxy:
+  enabled: false
+  endpoint: https://registry-1.docker.io
+  tlsVerify: true
+  username: ""
+  password: ""
 auth:
   internalUser:
     username: internal-ximager
