:sparkles: Support proxy blobs

--- a/conf/ximager.yaml
+++ b/conf/ximager.yaml
@@ -1,5 +1,6 @@
 log:
   level: debug
+  proxyLevel: info
 database:
   # The database type to use. Supported types are: sqlite3, mysql, postgresql
   type: mysql
