--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -23,12 +23,12 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: tosone
-          password: ${{ secrets.GHCR_TOKEN }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     registry: ghcr.io
+      #     username: tosone
+      #     password: ${{ secrets.GHCR_TOKEN }}
       - name: Cache Docker layers
         uses: actions/cache@v3
         with:
