--- a/deploy/ximager/templates/deployment.yaml
+++ b/deploy/ximager/templates/deployment.yaml
@@ -33,6 +33,8 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - server
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
@@ -45,6 +47,11 @@ spec:
             httpGet:
               path: /
               port: http
+          volumeMounts:
+            - name: "configmap"
+              mountPath: "/etc/ximager/ximager.yaml"
+              subPath: "ximager.yaml"
+              readOnly: false
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
         - name: {{ printf "%s-worker" .Chart.Name }}
@@ -52,6 +59,8 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - worker
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
@@ -64,8 +73,17 @@ spec:
             httpGet:
               path: /
               port: http
+          volumeMounts:
+            - name: "configmap"
+              mountPath: "/etc/ximager/ximager.yaml"
+              subPath: "ximager.yaml"
+              readOnly: false
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+      volumes:
+        - name: "configmap"
+          configMap:
+            name: "ximager-configmap"
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
