--- a/conf/ximager.yaml
+++ b/conf/ximager.yaml
@@ -38,7 +38,7 @@ storage:
     forcePathStyle: true
 # Notice: the tag never update after the first pulled from remote registry, unless you delete the image and pull again.
 proxy:
-  enabled: true
+  enabled: false
   endpoint: https://registry-1.docker.io
   tlsVerify: true
   username: ""
