--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@ assets/sigema.ai filter=lfs diff=lfs merge=lfs -text
 assets/sigema.png filter=lfs diff=lfs merge=lfs -text
 assets/sigema.svg filter=lfs diff=lfs merge=lfs -text
 assets/sigema-low.png filter=lfs diff=lfs merge=lfs -text
+assets/title.ai filter=lfs diff=lfs merge=lfs -text
+assets/title.svg filter=lfs diff=lfs merge=lfs -text
