--- a/web/package.json
+++ b/web/package.json
@@ -10,18 +10,16 @@
     "server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
-    "@faker-js/faker": "^8.0.2",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
+    "@yaireo/tagify": "^4.17.8",
     "axios": "^1.4.0",
-    "chart.js": "^4.3.0",
     "dayjs": "^1.11.9",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
@@ -32,14 +30,15 @@
     "@types/node": "^20.4.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/yaireo__tagify": "^4.17.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
     "json-server": "^0.17.3",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.25",
     "react-helmet-async": "^1.3.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6",
-    "vite": "^4.4.0"
+    "vite": "^4.4.1"
   }
 }
