--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@yaireo/tagify": "^4.17.8",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "human-format": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -27,7 +28,7 @@
     "react-use": "^17.4.0"
   },
   "devDependencies": {
-    "@types/node": "^20.4.0",
+    "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/yaireo__tagify": "^4.17.0",
@@ -39,6 +40,6 @@
     "react-helmet-async": "^1.3.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6",
-    "vite": "^4.4.1"
+    "vite": "^4.4.2"
   }
 }
