--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "human-format": "^1.2.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
