--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,12 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "flowbite": "^1.7.0",
     "human-format": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,17 +28,17 @@
     "react-use": "^17.4.0"
   },
   "devDependencies": {
-    "@types/node": "^20.4.1",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
     "json-server": "^0.17.3",
-    "postcss": "^8.4.25",
+    "postcss": "^8.4.26",
     "react-helmet-async": "^1.3.0",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
-    "vite": "^4.4.3"
+    "vite": "^4.4.4"
   }
 }
