--- a/deploy/sigma/templates/service.yaml
+++ b/deploy/sigma/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "ximager.fullname" . }}
+  name: {{ include "sigma.fullname" . }}
   labels:
-    {{- include "ximager.labels" . | nindent 4 }}
+    {{- include "sigma.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "ximager.selectorLabels" . | nindent 4 }}
+    {{- include "sigma.selectorLabels" . | nindent 4 }}
