--- a/deploy/sigma/templates/tests/test-connection.yaml
+++ b/deploy/sigma/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "ximager.fullname" . }}-test-connection"
+  name: "{{ include "sigma.fullname" . }}-test-connection"
   labels:
-    {{- include "ximager.labels" . | nindent 4 }}
+    {{- include "sigma.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "ximager.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "sigma.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
