--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -23,32 +23,20 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
-      - name: Setup golang
-        uses: actions/setup-go@v3
-        with:
-          go-version: ${{ matrix.go }}
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: "yarn"
-          cache-dependency-path: "web/yarn.lock"
       - name: Build
         run: |
           IP=`hostname -I | awk '{print $1}'`
           echo '{"insecure-registries" : ["'$IP':3000"]}' | sudo tee /etc/docker/daemon.json
           sudo service docker restart
 
-          ./scripts/run_all.sh
-
-          cd web
-          yarn install --frozen-lockfile
-          yarn build
-          cd ..
-          make build-release
+          make docker-build-dev
+      - name: Run sigma
+        run: |
+          docker run --name sigma -d -p 3000:3000 sigma:latest
+          sleep 5
+          docker logs sigma
       - name: Test push and e2e with k6
         run: |
-          ./bin/sigma server --config ./conf/config.yaml &
           ./e2e/push.sh
           curl https://github.com/grafana/k6/releases/download/v0.45.0/k6-v0.45.0-linux-amd64.tar.gz -L | tar xvz --strip-components 1
           ./k6 run e2e/sc.js
