--- a/conf/config-full.yaml
+++ b/conf/config-full.yaml
@@ -22,31 +22,27 @@ database:
     dbname: ximager
     sslmode: disable
 
-# deploy avaliable: single, replica
+# deploy available: single, replica
 # replica should use external redis
 deploy: single
 
 redis:
-  # redis type avaliable: internal, external
+  # redis type available: internal, external
   type: internal
   url: redis://:sigma@localhost:6379/0
 
 cache:
-  # the cache type avaliable is: redis
+  # the cache type available is: redis
   type: redis
-  # please attation in multi
-  inmemory: {}
-  redis: {}
 
 workqueue:
-  # the workqueue type avaliable: redis
+  # the workqueue type available: redis
   type: redis
-  redis: {}
 
 namespace:
   # push image to registry, if namespace not exist, it will be created automatically
   autoCreate: false
-  # the automatic created namespace visibility, avaliable: public, private
+  # the automatic created namespace visibility, available: public, private
   visibility: public
 
 http:
