--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -106,3 +106,47 @@ jobs:
           sbom: false
           cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:build-cache-debian
           cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:build-cache-debian,mode=max
+  image-build-builder:
+    name: image-build-builder
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout branch
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          lfs: true
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: tosone
+          password: ${{ secrets.GHCR_TOKEN }}
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ghcr.io/${{ github.repository }}-builder
+          tags: |
+            type=schedule,pattern={{date 'YYYYMMDD-hhmmss' tz='Asia/Shanghai'}}
+            type=ref,event=pr
+            type=ref,event=branch,enable=${{ github.ref != 'refs/heads/main' }}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=raw,value=nightly,enable={{is_default_branch}}
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: build/Dockerfile.builder
+          platforms: linux/amd64,linux/arm64
+          push: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/main' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          provenance: false
+          sbom: false
